# chat-app

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  logger.py  main.py
app/api/: __init__.py  auth.py  chats.py  groups.py  messages.py  websocket.py
app/core/: dependencies.py  security.py
app/db/: models.py  session.py
app/db/repositories/: __init__.py  base.py  chat.py  group.py  message.py  user.py
app/schemas/: __init__.py  base.py  chat.py  group.py  message.py  token.py  user.py
app/services/: __init__.py  auth.py  chat.py  group.py  message.py
app/websocket/: manager.py
migrations/: env.py  script.py.mako
migrations/versions/: 2b43646a8f92_initial_migration.py
scripts/: create_test_data.py  test_websocket.html
tests/unit/core/: test_dependencies.py  test_security.py
tests/unit/services/: test_auth_service.py  test_chat_service.py  test_group_service.py  test_message_service.py
